stderr
Printer.java:15: error: ',', ')', or '[' expected
    public void printNumberRangeResult(int initRange = 0, int endRange = 0){
                                                    ^
Printer.java:15: error: ';' expected
    public void printNumberRangeResult(int initRange = 0, int endRange = 0){
                                                                          ^
2 errors
